# Personal-Cybersecurity-RAG

./: README.md
Personal Cybersecurity Knowledge RAG (CLI, v1)/: README.md  config.yaml  config.yaml.example  pyproject.toml
Personal Cybersecurity Knowledge RAG (CLI, v1)/chroma_db/: chroma.sqlite3
Personal Cybersecurity Knowledge RAG (CLI, v1)/dummy_notes/: cryptography.md  firewalls.md
Personal Cybersecurity Knowledge RAG (CLI, v1)/seckg/: __init__.py  answerer.py  cli.py  config.py  ingest.py  models.py  render.py  retriever.py  vector_store.py  watcher.py
Personal Cybersecurity Knowledge RAG (CLI, v1)/seckg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Personal Cybersecurity Knowledge RAG (CLI, v1)/tests/: __init__.py  test_config.py  test_ingest.py  test_models.py
